--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
@@ -14,6 +16,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "stripe": "^15.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
